# superharness

./: .env.example  .gitignore  CLAUDE.md  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: USAGE.md  하네스-가이드.md
examples/starter-app/: .gitignore  README.md  pyproject.toml
examples/starter-app/src/agent_app/: __init__.py  app.py  cli.py
examples/starter-app/src/agent_app/skills/: review.md
examples/starter-app/tests/: test_app.py
src/superharness/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging.py
src/superharness/agents/: __init__.py  agent.py  registry.py
src/superharness/hooks/: __init__.py  bus.py  events.py
src/superharness/orchestration/: __init__.py  learner.py  orchestrator.py  pipeline.py  ralph.py  task.py
src/superharness/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py
src/superharness/skills/: __init__.py  injector.py  keyword_detector.py  registry.py  similarity.py  skill.py  versions.py  writer.py
src/superharness/skills/builtin/: autopilot.md  karpathy.md  ralph.md  team.md  ultrawork.md
src/superharness/state/: __init__.py  artifacts.py  descriptor.py  memory.py  memory_recorder.py  paths.py  store.py  wiki.py
src/superharness/tools/: __init__.py  codebase.py  codemap.py
tests/: conftest.py  test_anthropic_provider.py  test_artifacts_descriptor.py  test_cli.py  test_codebase.py  test_codemap.py  test_config_isolation.py  test_e2e_demo.py  test_keyword_detection.py  test_learner.py  test_live_anthropic.py  test_memory.py  test_memory_recorder.py  test_orchestrator.py  test_providers_mock.py  test_providers_registry.py  test_ralph_loop.py  test_similarity.py  test_skill_loading.py  test_skill_versions.py  test_skill_writer.py  test_wiki_session.py
