[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superharness"
version = "0.2.0"
description = "슈퍼하네스 — 멀티에이전트 오케스트레이션의 핵심 패턴을 구현한 프레임워크 중립 코어"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "superharness contributors" }]
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "typer>=0.12",
    "anyio>=4",
    "PyYAML>=6",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
superharness = "superharness.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/superharness"]
# builtin 스킬 .md는 패키지 디렉토리 안에 있어 wheel에 자동 포함된다.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: 실제 Anthropic API를 호출하는 테스트 (ANTHROPIC_API_KEY + anthropic extra 필요). 기본 skip.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
