[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-app"
version = "0.1.0"
description = "슈퍼하네스를 오케스트레이션 엔진으로 재사용하는 스타터 앱"
requires-python = ">=3.11"
dependencies = [
    "superharness",
    "typer>=0.12",
    "anyio>=4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.10"]
# 실제 Claude 백엔드까지: pip/uv install -e ".[dev,anthropic]"
anthropic = ["superharness[anthropic]"]

[project.scripts]
agent-app = "agent_app.cli:app"

# 슈퍼하네스를 git 저장소에서 릴리스 태그로 의존한다 (uv가 클론→wheel 빌드→설치).
# tag 대신 rev = "<sha>" 또는 branch = "main" 도 가능.
[tool.uv.sources]
superharness = { git = "https://github.com/kbigdata/superharness", tag = "v0.1.0" }

[tool.hatch.build.targets.wheel]
packages = ["src/agent_app"]
# 커스텀 스킬 .md는 패키지 디렉토리 안에 있어 wheel에 자동 포함된다.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
